[package]
name = "blinkenlights-rs"
version = "0.1.0"
authors = ["Nathaniel Graff <nathaniel.graff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.14.3"
gstreamer-app = "0.14.0"
glib = "0.8.1"
itertools = "0.8.0"
